<resources>
    <!--region Login-->
    <string name="app_name">Lego Store</string>
    <string name="login_title">Ingresa</string>
    <string name="login_button_continue_text">Continuar</string>
    <string name="login_button_loggin">Iniciar sesión</string>
    <string name="login_button_signin">Crear cuenta </string>
    <string name="login_hint_user">Usuario o correo </string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_sign_in">¿Todavía no tienes cuenta? Regístrate</string>
    <string name="login_error_email">El email no es válido</string>
    <string name="login_error_password">Debe contener al menos 6 caracteres</string>
    <string name="login_error_dialog_title">No hemos encontrado el usuario</string>
    <string name="login_error_dialog_message">Verifique los datos o vuelva a intentarlo</string>
    <!--endregion-->
    <!--region Sing In-->
    <string name="sign_in_form_nickname">Nombre de usuario</string>
    <string name="sign_in_form_real_name">Nombre completo</string>
    <string name="sign_in_form_email">Correo electrónico</string>
    <string name="sign_in_form_password">Contraseña</string>
    <string name="sign_in_form_repeat_password">Repetir contraseña</string>
    <string name="sign_in_button_create_account">Crear mi cuenta</string>
    <string name="sign_in_error_dialog_title">Ha ocurrido un error</string>
    <string name="sign_in_error_dialog_message">El correo electrónico ya está registrado.</string>
    <string name="sign_in_error_dialog_body">No hemos podido crear tu cuenta, inténtalo de nuevo más tarde</string>
    <string name="sign_in_error_dialog_positive_action">Aceptar</string>
    <string name="sign_in_error_mail">El email no es válido</string>
    <string name="sign_in_error_nickname">Debe contener al menos 6 caracteres</string>
    <string name="sign_in_error_realname">Debe contener al menos 6 caracteres</string>
    <string name="sign_in_error_password">Las 2 contraseñas debes ser iguales</string>
    <string name="sign_in_error_general">Ha ocurrido un erro intentelo de nuevo mas tarde</string>
    <!--endregion-->
    <!--region Verification-->
    <string name="verification_check_email">Para acceder a la aplicación verifica tu correo electrónico (recuerda mirar en SPAM).</string>
    <string name="verification_button_go_to_home">Ingresar a la tienda</string>
    <!--endregion-->
    <!--region Home-->
    <string name="home_message_welcome">Bienvenido %s</string>
    <string name="home_price">$ %s</string>
    <string name="home_log_out">Cerrar sesión</string>
    <string name="home_add_to_car">Añadir al carro</string>
    <!--endregion-->
    <!--region Detail-->
    <string name="detail_button_buy">Comprar</string>
    <string name="detail_button_add_to_cart">Agregar al carrito</string>
    <string name="detail_description_product">Descripción</string>
    <string name="detail_stock_product">Disponible: %s</string>
    <string name="detail_stock_product_title">Upps!!</string>
    <string name="detail_price">Precio: %s</string>
    <string name="detail_stock_product_message">Lo sentimos nos tenemos mas unidades disponibles.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--endregion-->

</resources>