<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.signin.ui.SingInFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/view_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/large_margin_forty"
        android:layout_marginBottom="@dimen/medium_margin_twelve"
        app:layout_constraintBottom_toTopOf="@+id/form_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation_login" />

    <ScrollView
        android:id="@+id/form_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_placeholder">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/container_form_sing_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewHeader">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_nickname"
                style="@style/FormTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintBottom_toTopOf="@+id/text_input_real_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_nickname"
                    style="@style/FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_form_nickname"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColorHighlight="@color/color_primary_red"
                    android:textColorHint="@color/color_primary_red" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_real_name"
                style="@style/FormTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintBottom_toTopOf="@+id/text_input_mail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_nickname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_real_name"
                    style="@style/FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_form_real_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColorHighlight="@color/color_primary_red"
                    android:textColorHint="@color/color_primary_red" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_mail"
                style="@style/FormTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintBottom_toTopOf="@+id/text_input_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_real_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email"
                    style="@style/FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_form_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColorHighlight="@color/color_primary_red"
                    android:textColorHint="@color/color_primary_red" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                style="@style/FormTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintBottom_toTopOf="@+id/text_input_repeat_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                    style="@style/FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_form_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textColorHighlight="@color/color_primary_red"
                    android:textColorHint="@color/color_primary_red" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_repeat_password"
                style="@style/FormTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintBottom_toTopOf="@+id/button_create_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_repeat_password"
                    style="@style/FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_form_repeat_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColorHighlight="@color/color_primary_red"
                    android:textColorHint="@color/color_primary_red" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_create_account"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:text="@string/sign_in_button_create_account"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_repeat_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>